Removed leading shebang. Removed use of OS to test for color; now use an environment variable. Changed all uses of "echo" to no longer use the "-e" flag. Changed "option" to action. Removed excessive use of quotes. Changed BELL and COLOR_LOGS to be boolean rather than string tests. Added a NO_JAVADOCS env setting for testing Usage now flags any unknown actions Error code of script has been corrected.